# anchor

./: .gitignore  Cargo.toml  Makefile  wordlist.txt
.github/: spellcheck.yml  wordlist.txt
.github/scripts/: toml_reader.sh
.github/workflows/: book.yml  docker.yml  extract-version.yml  linkcheck.yml  release.yml  test-suite.yml
anchor/: Cargo.toml  Dockerfile  Dockerfile.cross
anchor/client/: Cargo.toml  build.rs
anchor/client/src/: cli.rs  config.rs  lib.rs
anchor/common/instrumentation/: Cargo.toml
anchor/common/instrumentation/src/: lib.rs  opts.rs  parse.rs
anchor/common/instrumentation/tests/: attribute_macro.rs
anchor/common/qbft/: Cargo.toml
anchor/common/qbft/src/: config.rs  error.rs  lib.rs  tests.rs  types.rs
anchor/common/ssv_types/: Cargo.toml
anchor/common/ssv_types/src/: cluster.rs  lib.rs  message.rs  msgid.rs  operator.rs  share.rs  sql_conversions.rs  util.rs
anchor/common/version/: Cargo.toml
anchor/database/: Cargo.toml  README.md
anchor/database/src/: cluster_operations.rs  error.rs  lib.rs  multi_index.rs  operator_operations.rs  share_operations.rs  sql_operations.rs  state.rs  table_schema.sql  validator_operations.rs
anchor/database/src/tests/: cluster_tests.rs  mod.rs  operator_tests.rs  state_tests.rs  utils.rs  validator_tests.rs
anchor/eth/: Cargo.toml  README.md  execution.rs
anchor/eth/src/: error.rs  event_parser.rs  event_processor.rs  gen.rs  lib.rs  network_actions.rs  sync.rs  util.rs
anchor/http_api/: Cargo.toml  openapi.json
anchor/http_api/src/: tests.rs  types.rs
anchor/http_api/src/api/: account_response.rs  handlers.rs  operator_response.rs  tests.rs
anchor/http_api/src/schemas/: openapi.json
anchor/http_metrics/: Cargo.toml
anchor/http_metrics/src/: lib.rs
anchor/network/: Cargo.toml
anchor/network/src/: behaviour.rs  config.rs  discovery.rs  lib.rs  network.rs
anchor/processor/: Cargo.toml
anchor/processor/src/: lib.rs  metrics.rs
anchor/processor/tests/: processor_tests.rs
anchor/qbft/: Cargo.toml
anchor/qbft_manager/: Cargo.toml
anchor/qbft_manager/src/: lib.rs
anchor/signature_collector/: Cargo.toml
anchor/signature_collector/src/: lib.rs
anchor/src/: environment.rs  environment_windows.rs  main.rs
anchor/validator_store/: Cargo.toml
anchor/validator_store/src/: lib.rs  sync_committee_service.rs
book/: book.toml  installation.md
book/src/: SUMMARY.md  installation.md
