[package]
name = "anchor"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]
rust-version = "1.81.0"

[dependencies]
async-channel = { workspace = true }
clap = { workspace = true }
client = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
regex = "1.10.6"
