[package]
name = "http_api"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[lib]
name = "http_api"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
slot_clock = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
