[package]
name = "http_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
health_metrics = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
validator_metrics = { workspace = true }
