[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
dirs = { workspace = true }
discv5 = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.54", default-features = false, features = ["identify", "yamux", "noise", "secp256k1", "tcp", "tokio", "macros", "gossipsub", "quic", "ping"] }
lighthouse_network = { workspace = true }
serde = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
version = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
