[package]
name = "processor"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[dependencies]
metrics = { workspace = true }
num_cpus = { workspace = true }
qbft = { workspace = true }
serde = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
futures = { workspace = true }
