[package]
name = "ssv_types"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
base64 = { workspace = true }
derive_more = { workspace = true }
openssl = { workspace = true }
qbft = { workspace = true }
rusqlite = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
types = { workspace = true }
